--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <title>Qui va appeler ?</title>
     <!-- Montserrat Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <!-- CSS File -->
     <link rel="stylesheet" href="style.css">
+    <!-- JS File -->
+    <script src="script.js" type="text/javascript" defer></script>
 </head>
 <body>
     <div class="container">
@@ -22,7 +24,5 @@
         </button>
         <p class="message"></p>
     </div>
-    <!-- JS File -->
-    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
