--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- JS File -->
     <script src="script.js" type="text/javascript" defer></script>
-    <meta name="viewport" content="width", initial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="container">
