--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <title>Manageo BBA</title>
     <!-- Montserrat Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- CSS File -->
     <link rel="stylesheet" href="style.css">
     <!-- JS File -->
     <script src="script.js" type="text/javascript" defer></script>
     <!--jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--Font awesome-->
+    <script src="https://kit.fontawesome.com/ddd8de2320.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -60,7 +62,178 @@
                 </button>
                 <p class="message"></p>
             </div>
-
+        </section>
+        <section class="typesBurgers" id="classiques">
+            <h2>Les classiques</h2>
+            <div class="allBurgersCategory">
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+        <section class="typesBurgers" id="gourmets">
+            <h2>Les gourmets</h2>
+            <div class="allBurgersCategory">
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
     <script src="burger.js"></script>
