--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <a id="back-up" href="#nav">
+        <i class="fa-solid fa-caret-up"></i>
+    </a>
     <div class="burger">
         <span></span>
     </div>
-    <nav>
+    <nav id="nav">
         <ul class="right-part-line-bar">
-            <li><a href="">Classiques</a></li>
-            <li><a href="">Gourmets</a></li>
-            <li><a href="">Signatures</a></li>
-            <li><a href="">Smashs</a></li>
-            <li><a href="">Wrap Quesadillas</a> </li>
-            <li><a href="">Tacos Kebab</a></li>
-            <li><a href="">Big burgers</a></li>
-            <li><a href="">Desserts Boissons</a></li>
+            <li><a href="#classiques">Classiques</a></li>
+            <li><a href="#gourmets">Gourmets</a></li>
+            <li><a href="#signatures">Signatures</a></li>
+            <li><a href="#smashs">Smashs</a></li>
+            <li><a href="#wrap">Wrap Quesadillas</a> </li>
+            <li><a href="#tacos">Tacos Kebab</a></li>
+            <li><a href="#big">Big burgers</a></li>
+            <li><a href="#desserts">Desserts Boissons</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -64,7 +67,10 @@
             </div>
         </section>
         <section class="typesBurgers" id="classiques">
-            <h2>Les classiques</h2>
+            <div>
+                <h2>Les classiques</h2>
+                <span class="h2-line"></span>
+            </div>
             <div class="allBurgersCategory">
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
@@ -208,7 +214,196 @@
         </div>
         </section>
         <section class="typesBurgers" id="gourmets">
-            <h2>Les gourmets</h2>
+            <div>
+                <h2>Les gourmets</h2>
+                <span class="h2-line"></span>
+            </div>
+            <div class="allBurgersCategory">
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="typesBurgers" id="signatures">
+            <div>
+                <h2>Les Signatures</h2>
+                <span class="h2-line"></span>
+            </div>
+            <div class="allBurgersCategory">
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="typesBurgers" id="smashs">
+            <div>
+                <h2>Les Smashs</h2>
+                <span class="h2-line"></span>
+            </div>
+            <div class="allBurgersCategory">
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="typesBurgers" id="wrap">
+            <div>
+                <h2>Les wrap et Quesadillas</h2>
+                <span class="h2-line"></span>
+            </div>
+            <div class="allBurgersCategory">
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="typesBurgers" id="tacos">
+            <div>
+                <h2>Les tacos et kebab</h2>
+                <span class="h2-line"></span>
+            </div>
+            <div class="allBurgersCategory">
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="typesBurgers" id="big">
+            <div>
+                <h2>Les big burgers</h2>
+                <span class="h2-line"></span>
+            </div>
+            <div class="allBurgersCategory">
+                <div class="BurgerInCategory">
+                    <img src="assets/burgers/campagnard.jpg" alt="">
+                    <div class="BurgerTitleDescription">
+                        <h3>Classic Cheese</h3>
+                        <p>Salade, tomates, oignons</p>
+                    </div>
+                    <div class="AllPricesInCategory">
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Solo</p>
+                                <h4>10€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                        <div class="burgerPrice">
+                            <div class="SoloOrMenu">
+                                <p>Menu</p>
+                                <h4>14€</h4>
+                            </div>
+                            <button><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="typesBurgers" id="desserts">
+            <div>
+                <h2>Les desserts et boissons</h2>
+                <span class="h2-line"></span>
+            </div>
             <div class="allBurgersCategory">
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
@@ -237,5 +432,6 @@
         </section>
     </div>
     <script src="burger.js"></script>
+    <script src="back-up.js"></script>
 </body>
 </html>
