--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
+                        <p>Viande fraiche, double mild cheddar Anglais, oignons confits maison, salade, tomate et pain artisanal</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -98,21 +98,21 @@
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
+                        <h3>Bacon</h3>
+                        <p>lard fumé, steak, double mild cheddar Anglais, oignons frits confits, salade, tomates</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Solo</p>
-                                <h4>10€</h4>
+                                <h4>11€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
-                                <h4>14€</h4>
+                                <h4>15€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
@@ -121,21 +121,21 @@
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
+                        <h3>Chicken burger</h3>
+                        <p>Aiguillettes de poulet pané, double mild cheddar Anglais, oignons confits, salade, tomates</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Solo</p>
-                                <h4>10€</h4>
+                                <h4>11€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
-                                <h4>14€</h4>
+                                <h4>15€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
@@ -144,21 +144,21 @@
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
+                        <h3>Spicy</h3>
+                        <p>Piment, steak, double mild cheddar Anglais, oignons frits confits, salade, tomates</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Solo</p>
-                                <h4>10€</h4>
+                                <h4>11€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
-                                <h4>14€</h4>
+                                <h4>15€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
@@ -167,21 +167,21 @@
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
+                        <h3>Végéta</h3>
+                        <p>Sans viande, mozzarella, galette de pomme de terre, oignons confits, huile d'olive, ail en poudre</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Solo</p>
-                                <h4>10€</h4>
+                                <h4>9€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
-                                <h4>14€</h4>
+                                <h4>13€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
@@ -190,8 +190,8 @@
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
+                        <h3>Végéta 2.0</h3>
+                        <p>Sans viande, mozzarella, galette de pomme de terre, avocat, balsamique, oignons confits, huile d'olive, ail en poudre</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
