--- a/index.html
+++ b/index.html
@@ -452,21 +452,21 @@
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
+                        <h3>Abondance</h3>
+                        <p>Fromage abondance, steack, champignons, mayonaise truffée, éclat de pistache, salade, tomates</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Solo</p>
-                                <h4>10€</h4>
+                                <h4>14€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
-                                <h4>14€</h4>
+                                <h4>18€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
@@ -475,21 +475,21 @@
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
+                        <h3>Toast N Bel R</h3>
+                        <p>Bun grillé, cheddar poivre, sauces au poivre, steack boeuf, oignons crispy, lard fumé, tomates</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Solo</p>
-                                <h4>10€</h4>
+                                <h4>12€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
-                                <h4>14€</h4>
+                                <h4>16€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
@@ -498,21 +498,21 @@
                 <div class="BurgerInCategory">
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
-                        <h3>Classic Cheese</h3>
-                        <p>Salade, tomates, oignons</p>
+                        <h3>Toast Air</h3>
+                        <p>Pain de mie taosté, steack, cheddar, sauce biggy, lard fumé, oignons rouges crus, oignons crispy</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Solo</p>
-                                <h4>10€</h4>
+                                <h4>21€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
-                                <h4>14€</h4>
+                                <h4>25€</h4>
                             </div>
                             <button><i class="fa-solid fa-plus"></i></button>
                         </div>
