--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             </div>
         </section>
         <section>
+            <h1 id="ecrisCommande">Écris ta commande !</h1>
             <input type="text" id="username" placeholder="Nom" required>
             <input type="text" id="menu" placeholder="menu" required></input>
             <button class="validBtn" id="valid">ok</button>
