add list date name and menu

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <input type="text" id="menu" placeholder="menu" required></input>
             <button class="validBtn" id="valid">ok</button>
             <button class="validBtn" id="voirCommande">Voir les commandes</button>
+            <!-- <button id="masquerCommande"></button> -->
             <p id="commande" style="color: aliceblue;"></p>
         </section>
         <section class="typesBurgers" id="classiques">
@@ -227,7 +228,7 @@
                     </div>
                 </div>
             </div>
-    
+
         </section>
         <section class="typesBurgers" id="gourmets">
             <div>
@@ -385,7 +386,8 @@
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Litige</h3>
-                        <p>Steack, avocat, mozzarella, crème de balsamique, oignons crispy, salade, tomates, mayo basilic parmesan</p>
+                        <p>Steack, avocat, mozzarella, crème de balsamique, oignons crispy, salade, tomates, mayo
+                            basilic parmesan</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -431,7 +433,8 @@
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Campagnard</h3>
-                        <p>Steack, tomme de Savoie, champignons de paris, lardons au miel, moutarde, oignons crus rouges, oignons confits, salade, tomates</p>
+                        <p>Steack, tomme de Savoie, champignons de paris, lardons au miel, moutarde, oignons crus
+                            rouges, oignons confits, salade, tomates</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -454,7 +457,8 @@
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Abondance</h3>
-                        <p>Fromage abondance, steack, champignons, mayonaise truffée, éclat de pistache, salade, tomates</p>
+                        <p>Fromage abondance, steack, champignons, mayonaise truffée, éclat de pistache, salade, tomates
+                        </p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -477,7 +481,8 @@
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Toast N Bel R</h3>
-                        <p>Bun grillé, cheddar poivre, sauces au poivre, steack boeuf, oignons crispy, lard fumé, tomates</p>
+                        <p>Bun grillé, cheddar poivre, sauces au poivre, steack boeuf, oignons crispy, lard fumé,
+                            tomates</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -500,7 +505,8 @@
                     <img src="assets/burgers/campagnard.jpg" alt="">
                     <div class="BurgerTitleDescription">
                         <h3>Toast Air</h3>
-                        <p>Pain de mie taosté, steack, cheddar, sauce biggy, lard fumé, oignons rouges crus, oignons crispy</p>
+                        <p>Pain de mie taosté, steack, cheddar, sauce biggy, lard fumé, oignons rouges crus, oignons
+                            crispy</p>
                     </div>
                     <div class="AllPricesInCategory">
                         <div class="burgerPrice">
@@ -676,7 +682,7 @@
                 </div>
             </div>
         </section>
-        </div>
+    </div>
     </div>
     <script type="module" src="firebaseConfig.js"></script>
 
