voir commande toggle

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
             <input type="text" id="menu" placeholder="menu" required></input>
             <button class="validBtn" id="valid">ok</button>
             <button class="validBtn" id="voirCommande">Voir les commandes</button>
-            <!-- <button id="masquerCommande"></button> -->
-            <p id="commande" style="color: aliceblue;"></p>
+            <ul id="commande" style="color: aliceblue;"></ul>
         </section>
         <section class="typesBurgers" id="classiques">
+            <h1 id="choisisRepas">Choisis ton repas !</h1>
             <div>
                 <h2>Les classiques</h2>
                 <span class="h2-line"></span>
