--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                                 <p>Solo</p>
                                 <h4>10€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button id="btnAddCommand" data-info="ClassicCheese"><i
+                                    class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
