--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </ul>
     </nav>
     <div class="container">
+        <div class="messagePop" id="messagePop"></div>
         <section id="presentation">
             <div id="presentationInfos">
                 <h1>Que vas-tu choisir
@@ -98,7 +99,7 @@
                                 <p>Solo</p>
                                 <h4>10€</h4>
                             </div>
-                            <button id="btnAddCommand" data-info="ClassicCheese"><i
+                            <button data-info="Classic Cheese"><i
                                     class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
@@ -106,7 +107,8 @@
                                 <p>Menu</p>
                                 <h4>14€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Classic Cheese"><i 
+                                class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -122,14 +124,14 @@
                                 <p>Solo</p>
                                 <h4>11€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Bacon"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="burgerPrice">
                             <div class="SoloOrMenu">
                                 <p>Menu</p>
                                 <h4>15€</h4>
                             </div>
-                            <button><i class="fa-solid fa-plus"></i></button>
+                            <button data-info="Menu Bacon"><i class="fa-solid fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
@@ -687,6 +689,7 @@
     </div>
     <script type="module" src="firebaseConfig.js"></script>
 
+    <script src="addCommandMenu.js"></script>
     <script src="burger.js"></script>
     <script src="back-up.js"></script>
 </body>
