--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section>
             <h1 id="ecrisCommande">Écris ta commande !</h1>
             <input type="text" id="username" placeholder="Nom" required>
-            <input type="text" id="menu" placeholder="menu" required></input>
+            <input type="text" id="menu" placeholder="Choisis ton sandwitch dans la liste suivante ou écris directement ta commande" required></input>
             <button class="validBtn" id="valid">ok</button>
             <button class="validBtn" id="voirCommande">Voir les commandes</button>
             <ul id="commande" style="color: aliceblue;"></ul>
